Update gitignore with xcuserdata & xcuserstate
Signed-off-by: Joe Pham <rungxanh2901@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@
 /learn_new_things/Swift_CodeWithChris/MyPlayground.playground/Contents.swift
 /learn_new_things/Swift_CodeWithChris/MyPlayground.playground/playground.xcworkspace/xcuserdata/joepham.xcuserdatad/UserInterfaceState.xcuserstate
 /learn_new_things/Swift_CodeWithChris/MyPlayground.playground/contents.xcplayground
+xcuserdata
+*.xcuserstate
