--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@
 /learn_new_things/Swift_CodeWithChris/MyPlayground.playground/contents.xcplayground
 xcuserdata
 *.xcuserstate
+/learn_new_things/Swift100Days_PaulHudson/Project1/Project1.xcodeproj/project.xcworkspace/xcuserdata/joepham.xcuserdatad/UserInterfaceState.xcuserstate
+UserInterfaceState.xcuserstate
