Update to Vintage Flower 🌺
* STRING STRING STRING
* Changed the way how an image name is displayed in the main view
* Changed the image name to be shared in detail view
* Renamed input images accordingly to suit the change, using this format: `flower[<order number>].<image descriptive name>.jpg`

Signed-off-by: Joe Pham <rungxanh2901@gmail.com>

--- a/learn_new_things/Swift100Days_PaulHudson/Pet_projects/Vintage Flower/Vintage Flower/Info.plist
+++ b/learn_new_things/Swift100Days_PaulHudson/Pet_projects/Vintage Flower/Vintage Flower/Info.plist
@@ -44,7 +44,7 @@
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>NSPhotoLibraryUsageDescription</key>
-	<string>Please tap OK to allow saving pictures to your Photo Library</string>
+	<string>Please choose to allow saving pictures to your Photo Library</string>
 	<key>UIMainStoryboardFile</key>
 	<string>Main</string>
 	<key>UIRequiredDeviceCapabilities</key>
