Today App: Request access to user data
* Extended the list data source to request access to Apple Reminders’ event store

Signed-off-by: Joe Pham <rungxanh2901@gmail.com>

--- a/SwiftPetProjects/Today/Today/Info.plist
+++ b/SwiftPetProjects/Today/Today/Info.plist
@@ -53,6 +53,8 @@
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
 	</array>
+	<key>NSRemindersUsageDescription</key>
+	<string>The app uses Reminders to help you stay on track</string>
 	<key>UISupportedInterfaceOrientations~ipad</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
